--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lit-elements",
+  "name": "wasm-audio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,10 +7,12 @@
     "prestart": "make",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "gulp",
-    "build": "gulp --type=production build"
+    "build": "gulp --type=production build",
+    "license:check": "license-check-and-add check -f lca-config.json",
+    "license:fix": "license-check-and-add add -f lca-config.json -r"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Antoine CORDIER",
+  "license": "Apache-2.0",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "lit-element": "^2.2.1",
@@ -24,6 +26,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-cli": "^2.2.0",
     "gulp-util": "^3.0.8",
+    "license-check-and-add": "^4.0.5",
     "rollup": "^1.26.5",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
