--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,7 +7,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup emsdk
+      - name: setup emsdk
         uses: mymindstorm/setup-emsdk@v12
         with:
           # Make sure to set a version number!
@@ -16,18 +16,20 @@ jobs:
           # The cache folder will be placed in the build directory,
           #  so make sure it doesn't conflict with anything!
           actions-cache-folder: "emsdk-cache"
-      - name: Verify
+      - name: verify
         run: make -v && emcc -v
-      - name: Checkout
+      - name: configure path
+        run: echo 'source "/home/runner/work/wasm-audio/wasm-audio/emsdk-cache/emsdk-main/emsdk_env.sh"' >> $HOME/.bash_profile
+      - name: checkout
         uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
         with:
           persist-credentials: false
-      - name: Install and Build # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - name: install and build # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           npm install
           npm run build
 
-      - name: Deploy
+      - name: deploy
         uses: JamesIves/github-pages-deploy-action@3.5.9
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
