--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,16 +18,18 @@ jobs:
           actions-cache-folder: "emsdk-cache"
       - name: verify
         run: make -v && emcc -v
+      - name: move emsdk
+        run: mv /home/runner/work/wasm-audio/wasm-audio/emsdk-cache/emsdk-main /home/runner/work/emsdk
       - name: checkout
         uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
         with:
           persist-credentials: false
       - name: debug
-        run: tree /home/runner/work/wasm-audio/
+        run: tree /home/runner/work
       - name: install and build # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           npm install
-          source "/home/runner/work/wasm-audio/wasm-audio/emsdk-cache/emsdk-main/emsdk_env.sh"
+          source "/home/runner/work/emsdk/emsdk_env.sh"
           npm run build
 
       - name: deploy
