:construction_worker: update lca config

--- a/lca-config.json
+++ b/lca-config.json
@@ -7,7 +7,7 @@
       "**/*.txt",
       "dist/**",
       "dist-tsc/**",
-      "LICENSE.txt",
+      "LICENSE",
       "package-json.lock",
       ".tmp/**",
       ".vscode/**",
